--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -188,18 +188,14 @@
 }
 @media (max-width: 768px) {
     .intro-section {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 1200px;
-    margin-bottom: 60px;
+        flex-direction: column; /* Stack elements vertically for mobile */
+        align-items: center; /* Center align items vertically */
+        margin-bottom: 60px;
     }
 
     .text-section {
-        flex: 1;
         padding: 20px;
-        text-align: left;
+        text-align: center; /* Center align text for mobile */
     }
 
     .text-section h1 {
@@ -212,18 +208,16 @@
     }
 
     .image-section {
-        flex: 1;
-        display: flex;
-        justify-content: center;
-        margin-left: 20px; /* Adjusted margin for spacing */
+        margin-top: 20px; /* Add margin to separate text and image */
     }
 
     .profile-image {
-        width: 250px; /* Adjust size as needed */
-        height: 250px; /* Adjust height for square shape */
-        border-radius: 0; /* Make the border square */
-        border: none; /* Remove the border */
+        width: 250px;
+        height: 250px;
+        border-radius: 0;
+        border: none;
     }
+
     
     .recent-projects-section {
         padding: 20px; /* Adjust padding for mobile */
